<resources>
    <string name="app_name">DJ Timer</string>
    <string name="done">DONE!!</string>
    <string name="reset">RESET</string>
    <string name="go">GO</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="input_hint">PlayTime（min）</string>
    <string name="until_turn">Until your turn</string>
    <string name="reaming_time">Reaming time</string>


</resources>